--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
    
 
-    <a-kaai></a-kaai>
+    <a-kaai fit></a-kaai>
 
     <h1> En hier komt dan een app </h1>
 
