--- a/demo/index.html
+++ b/demo/index.html
@@ -20,14 +20,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
    
 
-    <a-kaai fit></a-kaai>
+    <a-kaai></a-kaai>
 
-    <h1> En hier komt dan een app </h1>
+    
 
     <script>
-      document.querySelector('button').addEventListener('click', function() {
-        alert(document.querySelector('a-kaai').sayHello('Hallo!'));
-      });
+      
     </script>
 
   </body>
