--- a/a-kaai.html
+++ b/a-kaai.html
@@ -25,7 +25,7 @@ Example:
     <link rel="stylesheet" href="aos-kaai-dark.css" />
     
 
-    <div id="kaai" style="background-color: #333333" horizontal center center-justified layout fit>
+    <div id="kaai" style="background-color: #333333" fit>
       
       <div class="helpings" horizontal layout flex>
         <a href="/help" class="helpbtn" >
@@ -33,7 +33,7 @@ Example:
         </a>
       </div>
 
-      <div class="tools" horizontal layout>
+      <div class="tools">
         <img class="kaaibtns" src="images/kaai-searchloop.svg">
         <a href="/#/knooppunt">
           <img class="kaaibtns" src="images/kaai-knooppunt.svg">
