--- a/demo/index.html
+++ b/demo/index.html
@@ -13,20 +13,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>a-kaai demo</title>
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../a-kaai.html">
   </head>
   <body>
 
-   
-
     <a-kaai></a-kaai>
-
-    
-
-    <script>
-      
-    </script>
 
   </body>
 </html>
