--- a/a-kaai.html
+++ b/a-kaai.html
@@ -25,9 +25,9 @@ Example:
     <link rel="stylesheet" href="aos-kaai-dark.css" />
     
 
-    <div id="kaai" style="background-color: #333333" fit>
+    <div id="kaai" style="background-color: #333333">
       
-      <div class="helpings" horizontal layout flex>
+      <div class="helpings">
         <a href="/help" class="helpbtn" >
           <img class="kaaibtns" src="images/kaai-help.svg">
         </a>
